--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:html": "pug.renderFile('views/index.pug')",
     "build:js": "./node_modules/.bin/babel src/js --out-dir dist --presets=@babel/env",
     "build:css": "sass src/scss:dist",
+    "test": "mocha",
     "start": "npm run build:js && npm run build:css && nodemon"
   },
-  "author": "",
+  "author": "Aashish Sharma",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "pug": "^2.0.3",
     "sass": "^1.14.1"
@@ -20,6 +22,8 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.4"
   }
 }
